This is my third commited

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RustomLab01</string>
+    <string name="hello_message">Hello World!</string>
+    <string name="button_message">I\'m a button</string>
+
 </resources>
