--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">RustomLab01</string>
     <string name="hello_message">Hello World!</string>
     <string name="button_message">I\'m a button</string>
+    <string name="editmessage" translatable="false">I\'m an EditTEXT</string>
+    <string name="hinttext" translatable="false">Write something here</string>
 
 </resources>
