--- a/app/src/main/res/values-b+fil/strings.xml
+++ b/app/src/main/res/values-b+fil/strings.xml
@@ -3,5 +3,8 @@
     <string name="app_name">RustomLab01</string>
     <string name="hello_message">Hello sa buong Mundo!</string>
     <string name="button_message">Button ako</string>
+    <string name="button1">Button ako</string>
+    <string name="button2">Button ako</string>
+    <string name="button3">Button ako</string>
 
 </resources>
